# Qoder_foobar

./: .gitignore  ANALYSIS_REPORT.md  ARCHITECTURE_ASSESSMENT.md  ARCHITECTURE_SUMMARY.md  AUDIO_FORMAT_ISSUE.md  AUDIO_QUALITY_TECHNICAL_ANALYSIS.md  BUILD.md  BUILD_AND_RUN.md  CMakeLists.txt  CMakeLists_ORIGINAL.txt  CMakeLists_WORKING.txt  CMakeLists_v2.txt  CODE_QUALITY_ANALYSIS.md  CODE_REVIEW_REPORT.md  COMPATIBILITY_FIX_GUIDE.md  COMPATIBILITY_RECOVERY_PLAN.md  COMPATIBILITY_ROADMAP.md  COMPILATION_HONEST_ASSESSMENT.md  COMPLETE_DEVELOPMENT_FINAL_REPORT.md  COMPLETE_FIX_IMPLEMENTATION.md  COMPLETION_SUMMARY.md  CRITICAL_BUG_RELEASEBUFFER.md  CROSSPLATFORM_IMPLEMENTATION_REPORT.md  DEPLOYMENT_SUMMARY.md  EXECUTIVE_SUMMARY.md  FEATURE_COMPLETENESS_ANALYSIS.md  FINAL_COMPLETION_REPORT.md  FINAL_FEATURE_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_ROOT_CAUSE_COMPLETE.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FIX_SUMMARY.md  FLAC_DECODER_README.md  FLAC_DECODER_SUMMARY.md  FOOBAR2000_COMPATIBILITY_ANALYSIS.md  FOOBAR2000_PLUGIN_SUPPORT_COMPLETE.md  FOOBAR_PLUGIN_INTEGRATION.md  FORMAT_CONVERSION_FIX.md  HANGING_FIX_REPORT.md  (+54 more)
build_new/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  MusicPlayer.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  core_engine.vcxproj  core_engine.vcxproj.filters  music-player.vcxproj  music-player.vcxproj.filters  test_audio_direct.vcxproj  test_audio_direct.vcxproj.filters
build_new/compat/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  data_migration.vcxproj  data_migration.vcxproj.filters  foobar_compat.vcxproj  foobar_compat.vcxproj.filters  foobar_plugin_loader.vcxproj  foobar_plugin_loader.vcxproj.filters  sdk_impl.vcxproj  sdk_impl.vcxproj.filters
build_new/platform/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  platform_abstraction.vcxproj  platform_abstraction.vcxproj.filters
build_new/tests/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build_test/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  MusicPlayer.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  music-player.vcxproj  music-player.vcxproj.filters  test-flac-decoder.vcxproj  test-flac-decoder.vcxproj.filters  test-wasapi.vcxproj  test-wasapi.vcxproj.filters
build_test/compat/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  foobar_compat.vcxproj  foobar_compat.vcxproj.filters
build_test/core/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  core_engine.vcxproj  core_engine.vcxproj.filters
build_test/gpu/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build_test/platform/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  platform_abstraction.vcxproj  platform_abstraction.vcxproj.filters
build_test/plugins/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build_test/sdk/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build_test_sdk/: CMakeCache.txt
cmake/: AudioBackend.cmake
compat/: README.md  adapter_base.h  foobar_compat_manager.cpp  foobar_compat_manager.h
compat/foobar2000/: foobar_adapter.h
compat/foobar_sdk/: foobar2000.cpp  foobar2000.h  foobar2000_sdk.h  foobar2000_sdk_complete.h  input_decoder.h
compat/plugin_loader/: plugin_loader.cpp  plugin_loader.h  service_registry_bridge.h  service_registry_bridge_new.h  test_plugin_loader.cpp
compat/sdk_implementations/: abort_callback.implified.h  audio_chunk_impl.h  common_includes.h  file_info_impl.cpp  file_info_impl.h  file_info_interface.h  file_info_types.h  input_decoder_impl.h  metadb_handle_impl.h  metadb_handle_impl_new.h  metadb_handle_interface.h  service_base.cpp  service_base.h  service_base_impl.h
compat/tests/: foobar_sdk_test.cpp  test_main.cpp
config/: config_manager.cpp  config_manager.h  default_config.json
config/themes/: dark.json  default.json
core/: CMakeLists.txt  audio_decoder_manager.cpp  audio_decoder_manager.h  audio_decoder_registry.cpp  audio_decoder_registry.h  audio_format_detector.cpp  audio_format_detector.h  core_engine.cpp  core_engine.h  playback_engine.cpp  plugin_host.cpp  plugin_manager.cpp  plugin_manager.h  plugin_manager_enhanced.cpp  plugin_manager_enhanced.h  plugin_manager_v2.cpp  plugin_registry.cpp  plugin_registry.h
demos/: multi_value_metadata_demo.cpp
docs/: ARCHITECTURE.md  AUDIO_BACKEND_AUTO_DETECTION.md  AUDIO_BACKEND_IMPLEMENTATION_SUMMARY.md  AUDIO_PIPELINE.md  CONFIGURATION.md  CONFIGURATION_INTEGRATION.md  CROSS_PLATFORM_BUILD.md  FLAC_DECODER_IMPLEMENTATION.md  INSTALL_LINUX.md  PLUGIN_DEVELOPMENT.md  PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_LIFECYCLE_MANAGEMENT.md  PROJECT_RECONSTRUCTION.md  README.md
docs/internal/: SAMPLE_RATE_IMPLEMENTATION_SUMMARY.md
docs/technical/: AudioVisualization_Architecture.md  COMPATIBILITY_ANALYSIS.md
examples/: audio_decoder_test.cpp  audio_decoder_test_simple.cpp  config_example.cpp  enhanced_plugin_example.cpp  test_config_system.cpp  test_resampler_precision.cpp
platform/: CMakeLists.txt  audio_output_factory.cpp  audio_output_factory.h
platform/windows/: audio_output_wasapi.cpp
plugins/: CMakeLists.txt
plugins/decoders/: CMakeLists.txt  flac_decoder.h  flac_decoder_new.cpp  mp3_decoder.cpp  mp3_decoder_impl.cpp  mp3_decoder_impl.h  ogg_vorbis_decoder.cpp  ogg_vorbis_decoder.h
plugins/dsp/: equalizer_dsp.cpp
plugins/dsp_resampler/: dsp_resampler.cpp
sdk/: plugin_base.cpp  qoder_plugin_sdk.h
src/: final_wav_player.cpp  main.cpp  music_player_config.cpp  music_player_plugin.cpp  music_player_simple.cpp
(+332 files in other folders)
